<resources>
    <string name="app_name">Warming Up</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="button7">Button7</string>
    <string name="button8">Button8</string>
    <string name="button9">Button9</string>
    <string name="button10">Button10</string>
    <string name="button11">Button11</string>
</resources>
